# QSMO

./: CMakeLists.txt  Doxyfile  README.md  bench_cpu.sh  bench_fpga.sh  bench_gpu.sh  qsmo_fpga.sh
algos-examples/: bernstein-vazirani.cpp  grover.cpp
algos-examples/gate_tests/: blas_h_tofix.cpp  ghz_preparation.cpp  h.cpp  sparse_toffoli.cpp  sparse_x_all.cpp  swap.cpp  toffoli.cpp  x_all.cpp
fpga_fix_kernels/: README.md  circuit.cpp  circuit.hpp  kernels_parallel.cpp  kernels_single_task.cpp
headers/: blochSphere.hpp  circuit.hpp  example_helper.hpp  kernels.hpp
src/: blochSphere.cpp  circuit.cpp  gemm_example_kernel.cpp  kernels.cpp  spmv_example_kernel.cpp
tests/: CMakeLists.txt  angles.cpp  ccflip.cpp  ccnot.cpp  cnot.cpp  h.cpp  rx.cpp  ry.cpp  rz.cpp  sparse_x_all.cpp  swap.cpp  x.cpp  y.cpp  z.cpp
tests/check_sum_probas/: check_sum_proba.sh  compute_sum.py  result.txt
